--- a/index.html
+++ b/index.html
@@ -19,62 +19,92 @@
             <div class="day" id="monday">
                 <div class="day-content">
                         <div class="day-header">
-                            <!--aca va el nombre del dia-->
+                            <h2>Monday</h2>
                         </div>
                         <div class="task-list">
                             <!--aca va la lista de tareas-->
-                            <ul></ul>
+                            <ul><li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li></ul>
                         </div>
                 </div>
             </div>
             <div class="day" id="tuesday">
                 <div class="day-content">
                     <div class="day-header">
-                        <!--aca va el nombre del dia-->
+                        <h2>Tuesday</h2>
                     </div>
                     <div class="task-list">
                         <!--aca va la lista de tareas-->
-                        <ul></ul>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
                     </div>
             </div>
             </div>
             <div class="day" id="wednesday">
                 <div class="day-content">
                     <div class="day-header">
-                        <!--aca va el nombre del dia-->
+                        <h2>Wednesday</h2>
                     </div>
                     <div class="task-list">
                         <!--aca va la lista de tareas-->
-                        <ul></ul>
+                        <ul><li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
                     </div>
             </div>
             </div>
             <div class="day" id="thursday">
                 <div class="day-content">
                     <div class="day-header">
-                        <!--aca va el nombre del dia-->
+                        <h2>Thursday</h2>
                     </div>
                     <div class="task-list">
                         <!--aca va la lista de tareas-->
-                        <ul></ul>
+                        <ul><li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
                     </div>
             </div>
             </div>
             <div class="day" id="friday">
                 <div class="day-content">
                     <div class="day-header">
-                        <!--aca va el nombre del dia-->
+                        <h2>Friday</h2>
                     </div>
                     <div class="task-list">
                         <!--aca va la lista de tareas-->
-                        <ul></ul>
+                        <ul><li>sdasda</li>
+                            <li>asdasdas</li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
                     </div>
             </div>
             </div>
             <div class="note">
                 <div class="note-content">
                     <div class="note-header">
-                        <!--aca va el titulo notes-->
+                        <h2>Notes</h2>
                     </div>
                     <div class="note-section">
                         <!--aca van las notas-->
