--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
                         </div>
                         <div class="task-list">
                             <!--aca va la lista de tareas-->
-                            <ul><li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li></ul>
+                            <ul></ul>
                         </div>
                 </div>
             </div>
@@ -39,14 +34,7 @@
                     </div>
                     <div class="task-list">
                         <!--aca va la lista de tareas-->
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
+                        <ul></ul>
                     </div>
             </div>
             </div>
@@ -57,13 +45,7 @@
                     </div>
                     <div class="task-list">
                         <!--aca va la lista de tareas-->
-                        <ul><li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
+                        <ul></ul>
                     </div>
             </div>
             </div>
@@ -74,13 +56,7 @@
                     </div>
                     <div class="task-list">
                         <!--aca va la lista de tareas-->
-                        <ul><li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
+                        <ul></ul>
                     </div>
             </div>
             </div>
@@ -91,13 +67,7 @@
                     </div>
                     <div class="task-list">
                         <!--aca va la lista de tareas-->
-                        <ul><li>sdasda</li>
-                            <li>asdasdas</li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
+                        <ul></ul>
                     </div>
             </div>
             </div>
@@ -115,5 +85,6 @@
     </section>
 
     <footer></footer>
+    <script src="script.js"></script>
 </body>
 </html>
