eliminado de tareas funcionando

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <!-- TODO poner un placeholder de la fecha -->
         </div>
     </header>
+    <!--<button id="resetTasks">borrar todas</button> -->
 
     <section>
         <div class="week">
