el div no desborda

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <h2>Notes</h2>
                     </div>
                     <div class="note-section">
-                        <!--aca van las notas-->
+                        <textarea placeholder="Escribe tus notas aquí..."></textarea>
                     </div>
             </div>
             </div>
