boton refresh listo

--- a/index.html
+++ b/index.html
@@ -78,14 +78,18 @@
                         <h2>Notes</h2>
                     </div>
                     <div class="note-section">
-                        <textarea placeholder="Escribe tus notas aquí..."></textarea>
+                        <textarea placeholder="Remember to..."></textarea>
                     </div>
             </div>
             </div>
         </div>
     </section>
 
-    <footer></footer>
+    <footer>
+        <div>
+            <button class="refresh-week-btn" title="Re-start week"><img src="images/refresh.png" alt="re-start week"></button>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
